Sat Aug  3 22:40:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): allow header file to check.
	  [ruby-core:55745] [Bug #8593]

Sat Aug  3 22:24:44 2013  Shota Fukumori  <her@sorah.jp>

	* lib/uri/common.rb (URI.decode_www_form_component):
	  Don't raise error when str includes multibyte characters.

Sun Jul 28 22:00:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rational.c (f_round_common): Rational is expected to be returned by
	  Rational#*, but mathn.rb breaks that assumption.  [ruby-core:56177]
	  [Bug #8687]

Sun Jul 28 21:50:34 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* io.c (io_getpartial): use rb_str_locktmp_ensure().
	  [ruby-core:56121] [Bug #8669]

	* io.c (rb_io_sysread): ditto.

	* test/ruby/test_io.rb: add tests for above.

Sun Jul 28 21:50:34 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c: add internal API rb_str_locktmp_ensure().

	* io.c (io_fread): use rb_str_locktmp_ensure().
	  [ruby-core:56121] [Bug #8669]

	* test/ruby/test_io.rb: add a test for above.

Sun Jul 28 21:44:57 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_asn1.c (asn1time_to_time):  Implement YYMMDDhhmmZ
	  format for ASN.1 UTCTime.  [ruby-trunk - Bug #8664]
	* test/openssl/test_asn1.rb:  Test for the above.

Fri Jul 26 00:38:58 2013  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* lib/rubygems: Update to RubyGems 2.0.6. [ruby-core:56160]
	  [Backport #8682]

Wed Jul 24 22:35:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (find_proxy): raise BadURIError if the URI is
	  a relative URI. [Bug #8645]

Wed Jul 24 01:13:02 2013  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* include/ruby/intern.h (rb_f_lambde): restore the declaration of
	  rb_f_lambda() for backword compatibility. and mark it as deprecated.

Tue Jul 23 01:36:43 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems/psych_additions.rb: Ignore Psych docs here

Tue Jul 23 01:34:00 2013  Koichi Sasada  <ko1@atdot.net>
