@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.0.0"
 #define RUBY_RELEASE_DATE "2013-08-03"
-#define RUBY_PATCHLEVEL 286
+#define RUBY_PATCHLEVEL 287
 
 #define RUBY_RELEASE_YEAR 2013
 #define RUBY_RELEASE_MONTH 8
